--- a/pom.xml
+++ b/pom.xml
@@ -40,27 +40,19 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-		</dependency>
-		
+				
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+        </dependency>
 		
-		<!-- https://mvnrepository.com/artifact/javax.persistence/com.springsource.javax.persistence -->
-		<dependency>
-		    <groupId> jakarta.persistence </groupId>
-		    <artifactId>com.springsource.jakarta.persistence</artifactId>
-		    <version>2.0.0 </version>
-		    <scope>provided</scope>
-		</dependency>
-
 	</dependencies>
 
 	<build>
